Fixed spacing in the Titlebar/Status bar

--- a/obsidian.css
+++ b/obsidian.css
@@ -2704,7 +2704,7 @@ community:
             justify-content: center;
             align-content: center;
             flex-direction: column;
-            margin: 0px auto;
+            margin: 2px auto 0px auto;
             width: fit-content;
             padding: 0 10px;
             color: var(--text-muted);
@@ -2772,7 +2772,7 @@ community:
             }
             
             .pt-windows-titlebar .titlebar {
-                height: 28px !important;
+                height: 30px !important;
             }
             
             .pt-windows-titlebar .titlebar-button-container {
@@ -2783,7 +2783,7 @@ community:
                 top: 0px;
                 left: 48px !important;
                 height: 22px;
-                margin-top: 3px;
+                margin-top: 4px;
                 background-color: var(--tab-label-background-color);
                 border-radius: var(--border-radius-small);
                 box-shadow: var(--drop-shadow);
@@ -2888,7 +2888,7 @@ community:
                 justify-content: center;
                 align-content: center;
                 flex-direction: column;
-                margin: 3px auto 0px auto;
+                margin: 4px auto 0px auto;
                 width: fit-content;
                 padding: 0px 10px;
                 color: var(--text-muted);
@@ -3159,7 +3159,7 @@ community:
     .pt-status-bar-position-top.pt-status-bar-align-left.pt-default-titlebar .status-bar {
         position: absolute;
         order: 0;
-        margin-top: -22px;
+        margin-top: -20px;
         margin-bottom: 0px;
         font-size: 13px;
         line-height: 13px;
@@ -3186,7 +3186,7 @@ community:
     .pt-status-bar-position-top.pt-status-bar-align-center.pt-default-titlebar .status-bar {
         position: absolute;
         order: 0;
-        margin-top: -22px;
+        margin-top: -20px;
         margin-bottom: 0px;
         font-size: 13px;
         line-height: 13px;
@@ -3198,7 +3198,7 @@ community:
     .pt-status-bar-position-top.pt-status-bar-align-right.pt-default-titlebar .status-bar {
         position: absolute;
         order: 0;
-        margin-top: -22px;
+        margin-top: -20px;
         margin-bottom: 0px;
         font-size: 13px;
         line-height: 13px;
